<resources>
    <string name="app_name">Bocazas</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="control_fijo">Control Fijo</string>
    <string name="hercules">Hercules</string>
    <string name="control_movil">Control Movil</string>
    <string name="radar">Radar</string>
    <string name="text_alert">Text Alert</string>
    <string name="add">Add</string>
</resources>
