<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.luis_curso.app_alert.MainActivity">

    <EditText
        android:id="@+id/textNewAlert"
        android:layout_width="340dp"
        android:layout_height="183dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/text_alert"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMovilRadar" />

    <Button
        android:id="@+id/buttonAddNewAlert"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="34dp"
        android:hint="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNewAlert"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/buttonStaticControl"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/control_fijo"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/buttonMovilRadar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground_police" />

    <ImageButton
        android:id="@+id/buttonHercules"
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/hercules"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRadar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground_hercules" />

    <ImageButton
        android:id="@+id/buttonRadar"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/radar"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/buttonHercules"
        app:layout_constraintStart_toEndOf="@+id/buttonMovilRadar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground_antena" />

    <ImageButton
        android:id="@+id/buttonMovilRadar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/control_movil"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/buttonRadar"
        app:layout_constraintStart_toEndOf="@+id/buttonStaticControl"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground_radar_movil" />

</android.support.constraint.ConstraintLayout>